fix: Icons align

--- a/styles/pages/payables.scss
+++ b/styles/pages/payables.scss
@@ -38,7 +38,7 @@ $overdue-label-color: #F25353;
   $from-top-to-start: ($inputs-group-input-height - 30px)/2;
   position: absolute;
   top: $from-top-to-start;
-  right: -30px;
+  right: -15px;
   color: $gray-middle-new;
   cursor: pointer;
 
